tests/macros/duplicate/transform_async.rs
fn main() {
    let q = inquisition::questions![input {
        transform_async: todo!(),
        transform_async: todo!(),
    }];
}
